--- a/app/templates/programs/view/_floating_buttons.html
+++ b/app/templates/programs/view/_floating_buttons.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="floating-inscription-button">
-  <a href="#" class="btn btn-primary btn-inscription">
+  <a class="btn btn-primary btn-inscription">
     <i class="fas fa-graduation-cap me-2"></i>Inscribirme
   </a>
 </div>
