--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -3,7 +3,7 @@
 
 {% block styles %}
 {{ super() }}
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/auth/login-register.css') }}?v=1.27">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/auth/login-register.css') }}?v=1.34">
 {% endblock %}
 
 {% block scripts %}
@@ -14,10 +14,17 @@
 {% block navbar %}{%endblock%}
 
 {% block content %}
-<div class="container d-flex justify-content-center align-items-center" style="min-height: calc(100vh - 210px);">
-  <div class="auth-bg" style="width: 100%; max-width: 400px;">
-    <div class="diseño card shadow-sm ">
-      <div class="card-body" style="width: 100%;">
+<!-- Banner flotante del sistema - Integrado con el header existente -->
+<div class="siiapec-welcome-banner">
+  <div class="banner-content">
+    <span class="banner-text">Bienvenido al Sistema Integral de Información para Administración y Permanencia de Posgrado</span>
+  </div>
+</div>
+
+<div class="auth-container">
+  <div class="auth-bg">
+    <div class="diseño card shadow-sm">
+      <div class="card-body" style = "width: 100%;">
         <h3 class="card-title text-center mb-4">Iniciar Sesión</h3>
         <hr class="mx-3">
         {% with messages = get_flashed_messages(with_categories=true) %}
@@ -39,11 +46,11 @@
             <label for="password" class="form-label">Contraseña</label>
             <input type="password" class="form-control" id="password" name="password" required>
           </div>
-          <button class="btn btn-primary w-100" onclick="random()">Entrar</button>
+          <button class="btn btn-primary w-100 bg-tecnm" onclick="random()">Entrar</button>
         </form>
 
         <div class="mt-3 text-center">
-          ¿No tienes cuenta? <a href="{{ url_for('auth.register') }}" data-no-swup >Regístrate</a>
+          ¿No tienes cuenta? <a href="{{ url_for('auth.register') }}" data-no-swup>Regístrate</a>
         </div>
       </div>
     </div>
