Creación de la página de admisión, enpoint para el envió de documentos, creación de roles_required de utils para un control interno de los roles

--- a/app/templates/programs/view/_floating_buttons.html
+++ b/app/templates/programs/view/_floating_buttons.html
@@ -5,8 +5,14 @@
   </a>
 </div>
 
+
+ <!-- Botón flotante para inscripción -->
 <div class="floating-inscription-button">
-  <a class="btn btn-primary btn-inscription">
+  <button
+      type="button"
+      class="btn btn-primary btn-inscription"
+      data-bs-toggle="modal"
+      data-bs-target="#enrollmentModal">
     <i class="fas fa-graduation-cap me-2"></i>Inscribirme
-  </a>
+  </button>
 </div>
