--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Página no encontrada - 404{% endblock %}
+{% block title %}Error en el servidor 500{% endblock %}
 <!-- Sobrescritura de la barra de navegación para que no aparezca-->
 {% block navbar %}{%endblock%} 
 {% block styles %}
