Modificación de la parte del perfil la información academica, así como la creación de la parte del metodo post de editar el perfil, creación de una nueva carpeta para administrar logica interna de manera más modular y eficiente.

--- a/app/static/css/user/profile.css
+++ b/app/static/css/user/profile.css
@@ -107,6 +107,11 @@
     border-bottom: 1px solid #e9ecef;
 }
 
+.legend-dot{
+  display:inline-block;width:12px;height:12px;border-radius:50%;
+}
+
+
 /* Estilos responsivos */
 @media (max-width: 768px) {
     .profile-avatar {
