--- a/app/templates/user/profile/_profile_academic.html
+++ b/app/templates/user/profile/_profile_academic.html
@@ -152,7 +152,7 @@
 
     {% endif %}
 
-    {% if current_user.role.name in ['program_admin', 'posgraduate_admin'] %}
+    {% if current_user.role.name in ['program_admin', 'postgraduate_admin'] %}
     <div class="col-md-12 mb-4">
         <div class="card shadow-sm">
             <div class="card-header">
