--- a/app/templates/user/profile/_profile_admin.html
+++ b/app/templates/user/profile/_profile_admin.html
@@ -79,7 +79,7 @@
             </div>
         </div>
 
-        {% if current_user.role.name == 'posgraduate_admin' %}
+        {% if current_user.role.name == 'postgraduate_admin' %}
         <h6 class="mb-3">Estadísticas Generales</h6>
         <div class="row mb-4">
             <div class="col-md-6">
