--- a/app/templates/user/profile/_profile_info.html
+++ b/app/templates/user/profile/_profile_info.html
@@ -42,7 +42,7 @@
                             Servicio Social
                         {% elif current_user.role.name == 'program_admin' %}
                             Administrador de Programa
-                        {% elif current_user.role.name == 'posgraduate_admin' %}
+                        {% elif current_user.role.name == 'postgraduate_admin' %}
                             Administrador de Posgrado
                         {% endif %}
                     </p>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
 
-                {% if current_user.role.name in ['program_admin', 'posgraduate_admin'] %}
+                {% if current_user.role.name in ['program_admin', 'postgraduate_admin'] %}
                 <div class="d-flex">
                     <div class="bg-danger bg-opacity-10 p-2 rounded-circle me-3">
                         <i class="bi bi-shield-check text-danger"></i>
@@ -140,7 +140,7 @@
                         <small class="text-muted">22 de Junio, 2025</small>
                     </div>
                 </div>
-                {% elif current_user.role.name in ['program_admin', 'posgraduate_admin'] %}
+                {% elif current_user.role.name in ['program_admin', 'postgraduate_admin'] %}
                 <div class="d-flex mb-3">
                     <div class="bg-primary bg-opacity-10 p-2 rounded-circle me-3">
                         <i class="bi bi-calendar text-primary"></i>
