--- a/app/templates/user/profile/_profile_academic.html
+++ b/app/templates/user/profile/_profile_academic.html
@@ -140,7 +140,7 @@
 
                 {% if pending_items %}
                 <div class="mt-3">
-                    <a class="btn btn-primary btn-sm" href="{{ url_for('program.admission_dashboard',
+                    <a class="btn btn-primary btn-sm" href="{{ url_for('program.admission.admission_dashboard',
                             slug=program.slug) }}">
                         <i class="bi bi-upload me-2"></i>Subir documentos pendientes
                     </a>
