--- a/app/templates/programs/admission/_archive_table.html
+++ b/app/templates/programs/admission/_archive_table.html
@@ -19,7 +19,6 @@
     <!-- Fila principal --------------------------------------------------- -->
     <tr>
       <td><i class="far fa-file-alt text-secondary"></i></td>
-
       <td>
         <a class="text-decoration-none" data-bs-toggle="collapse"
            href="#{{ row_id }}" role="button">
@@ -52,32 +51,36 @@
 
       <!-- Acciones -->
       <td class="d-flex gap-1">
-        {% if sub %}
-          <a class="btn btn-outline-primary btn-sm" title="Ver"
-             href="{{ url_for('files.user_doc',
-                              user_id=current_user.id,
-                              phase='admission',
-                              filename=sub.file_path.split('/')[-1]) }}">
-            <i class="fas fa-eye"></i>
-          </a>
-        {% endif %}
+        {% if arch.is_uploadable %}
+          {% if sub %}
+            <a class="btn btn-outline-primary btn-sm" title="Ver"
+              href="{{ url_for('files.user_doc',
+                                user_id=current_user.id,
+                                phase='admission',
+                                filename=sub.file_path.split('/')[-1]) }}">
+              <i class="fas fa-eye"></i>
+            </a>
+          {% endif %}
 
-        <button class="btn btn-outline-success btn-sm"
-                title="Subir / Reemplazar"
-                data-bs-toggle="modal"
-                data-bs-target="#uploadModal"
-                data-archive="{{ arch.id }}">
-          <i class="fas fa-upload"></i>
-        </button>
+          <button class="btn btn-outline-success btn-sm"
+                  title="Subir / Reemplazar"
+                  data-bs-toggle="modal"
+                  data-bs-target="#uploadModal"
+                  data-archive="{{ arch.id }}">
+            <i class="fas fa-upload"></i>
+          </button>
 
-        {% if sub %}
-          <form method="POST"
-                action="{{ url_for('program.delete_submission', sub_id=sub.id) }}"
-                onsubmit="return confirm('¿Eliminar archivo?');">
-            <button class="btn btn-outline-danger btn-sm" title="Borrar">
-              <i class="fas fa-trash"></i>
-            </button>
-          </form>
+          {% if sub %}
+            <form method="POST"
+                  action="{{ url_for('program.admission.delete_submission', sub_id=sub.id) }}"
+                  onsubmit="return confirm('¿Eliminar archivo?');">
+              <button class="btn btn-outline-danger btn-sm" title="Borrar">
+                <i class="fas fa-trash"></i>
+              </button>
+            </form>
+          {% endif %}
+        {% else %}
+            <i class="fas fa-ban"></i><span style="font : italic">Sin acciones disponibles</span>
         {% endif %}
       </td>
 
