--- a/app/templates/admin/review/review_detail.html
+++ b/app/templates/admin/review/review_detail.html
@@ -3,7 +3,7 @@
 {% block title %}Revisión de Documento #{{ sub.id }}{% endblock %}
 
 {% block styles %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/admin_review.css') }}v=1.0">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/admin/admin_review.css') }}v=1.0">
 {% endblock %}
 
 {% block content %}
@@ -45,5 +45,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{{ url_for('static', filename='js/admin_review.js') }}"></script>
+<script src="{{ url_for('static', filename='js/admin/admin_review.css.js') }}"></script>
 {% endblock %}
